--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -106,3 +106,15 @@ img {
         --radius: 0.5rem;
     }
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
