Toasts + Auth translations

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -11,7 +11,7 @@
     --secondary-light: #0000001a;
     --secondary-dark: #0000004d;
 
-    --yellow: #ffd500;
+    --yellow: #f2ba36;
     --yellow-dark: #ccaa00;
     --yellow-light: #ffe066;
 
